Fixed table tbody duplication. Aligned items in center with flexbox.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,29 +11,31 @@
 body{
     grid-template-columns: 1fr 5fr 1fr;
     justify-content: center;
+    display:flex;
 }
 
 .center{
-    display:grid;
-    grid-column: 2;
+    justify-content: center;
+    text-align: center;
 }
 
 
 /*Forms*/
 .form{
-    display:grid;
+    display:flex;
+    justify-content: center;
 }
 
 button {
     border: 2px solid;
     border-radius: 4px;
-    justify-content: center;
+    font-family: 'Open Sans', sans-serif;
 }
 
 input{
     border: 2px solid;
     border-radius: 4px;
-    justify-content: center;
+    font-family: 'Open Sans', sans-serif;
 }
 input:hover{
     background-color:#b1aa9f
@@ -66,6 +68,12 @@ td{
 
 #taskTable tbody:first-child{
     background-color:#b1aa9f;
+}
+
+.taskTableDiv{
+    display:flex;
+    justify-content: center;
+    padding-top: 0.4em;
 }
 
 
